<resources>
    <string name="app_name">ShoeStore</string>
    <string name="email">Email</string>
    <string name="email_hint">Please enter your email</string>
    <string name="password">Password</string>
    <string name="password_hint">Please enter your password</string>
    <string name="login">Login</string>
    <string name="welcome_text">Hello! Welcome to the Shoe Store where you can look at some cool shoes!
        Please click the \'Instructions\' button to get started! Have a great shoe purchasing journey!
    </string>
    <string name="welcome">WELCOME</string>
    <string name="instructions_label">Instructions</string>
    <string name="start">Start</string>
    <string name="instructions">INSTRUCTIONS</string>
    <string name="instructions_text">In this shoe store, feel free to view and add shoes. Have a good time!</string>
    <string name="view_shoe_detail">View shoe detail</string>
    <string name="shoe_list">Shoe List</string>
    <string name="logout">Logout</string>
</resources>
