<?xml version="1.0" encoding="utf-8"?>

<layout tools:context="com.udacity.shoestore.screens.instructions.InstructionsFragment"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <TextView
            android:id="@+id/textInstructions"
            android:text="@string/instructions_text"
            app:layout_constraintBottom_toTopOf="@+id/startButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titleInstructions"
            app:layout_constraintVertical_bias="0.459"
            style="@style/info_text" />

        <TextView
            android:id="@+id/titleInstructions"
            android:layout_marginTop="152dp"
            android:text="@string/instructions"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/large_title" />

        <Button
            android:id="@+id/startButton"
            android:layout_width="224dp"
            android:layout_height="52dp"
            android:layout_marginBottom="264dp"
            android:text="@string/start"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
