<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.udacity.shoestore.screens.welcome.WelcomeFragment">

<!--    I feel like a linear layout should be used here because the views are organized
        in a column, but experimenting with constraint layout
        was helpful for me to understand it better.-->

   <androidx.constraintlayout.widget.ConstraintLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent">
       <TextView
           android:id="@+id/textWelcome"
           android:text="@string/welcome_text"
           app:layout_constraintBottom_toTopOf="@+id/instructionsButton"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toBottomOf="@+id/titleWelcome"
           app:layout_constraintVertical_bias="0.459"
           style="@style/info_text" />

       <TextView
           android:id="@+id/titleWelcome"
           android:layout_marginTop="152dp"
           android:text="@string/welcome"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toTopOf="parent"
           style="@style/large_title" />

       <Button
           android:id="@+id/instructionsButton"
           android:layout_width="224dp"
           android:layout_height="52dp"
           android:layout_marginBottom="264dp"
           android:text="@string/instructions_label"
           app:layout_constraintBottom_toBottomOf="parent"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toStartOf="parent" />
   </androidx.constraintlayout.widget.ConstraintLayout>
</layout>